# orthanc-object-storage

./: .hgignore  AUTHORS  Dockerfile  NEWS  README.md  TODO
Aws/: AwsS3StoragePlugin.cpp  AwsS3StoragePlugin.h  AwsStaticConfiguration.cmake  CMakeLists.txt  DownloadStaticPackages.sh  README.txt  aws-c-common-0.9.23.patch  aws-c-io-0.14.9.patch  aws-sdk-cpp-1.11.178.patch  holy-build-box-compile.sh  holy-build-box-internal.sh  mingw-compile.sh
Aws/Graveyard/: AwsExternalProject.cmake
Aws/mingw-compile/: Dockerfile  build.sh
Azure/: AzureBlobStoragePlugin.cpp  AzureBlobStoragePlugin.h  CMakeLists.txt
Common/: BaseStorage.cpp  BaseStorage.h  BaseStoragePlugin.cpp  BaseStoragePlugin.h  CryptoPPConfiguration.cmake  CryptoPPPackage.sh  EncryptionConfigurator.cpp  EncryptionConfigurator.h  EncryptionHelpers.cpp  EncryptionHelpers.h  FileSystemStorage.cpp  FileSystemStorage.h  FileSystemStoragePlugin.cpp  FileSystemStoragePlugin.h  IStorage.h  IStoragePlugin.h  MoveStorageJob.cpp  MoveStorageJob.h  StoragePlugin.cpp  StoragePlugin.h
Common/Resources/: DownloadOrthancFramework.cmake  SyncOrthancFolder.py
Google/: CMakeLists.txt  GoogleStoragePlugin.cpp  GoogleStoragePlugin.h
UnitTestsSources/: EncryptionTests.cpp  UnitTestsGcsClient.cpp  UnitTestsMain.cpp
